# backend-dev-course

./: .gitignore  README.md  WARP.md
docs/: outline.md
modules/01-foundations/: README.md
modules/02-programming-in-depth/: LABS.md  README.md
modules/02-programming-in-depth/go/: README.md  go.mod
modules/02-programming-in-depth/js/: README.md  config.js  index.js  package-lock.json  package.json  server.js
modules/02-programming-in-depth/js/lib/: normalizeUserInput.js
modules/02-programming-in-depth/js/test/: config.test.js  http.normalize-js.test.js  http.normalize.test.js  normalizeUserInput.test.js
modules/02-programming-in-depth/py/: README.md  requirements-dev.txt
modules/02-programming-in-depth/py/app/: config.py  main.py  utils.py
modules/02-programming-in-depth/py/tests/: test_config.py  test_http.py  test_utils.py
modules/02-programming-in-depth/rust/: Cargo.toml  README.md
modules/02-programming-in-depth/rust/src/: app.rs  config.rs  lib.rs  main.rs
modules/02-programming-in-depth/rust/tests/: config.rs  http.rs
modules/02-programming-in-depth/ts/: README.md  package-lock.json  package.json  tsconfig.json
modules/02-programming-in-depth/ts/src/: config.ts  index.ts  (+1 more)
modules/03-databases/: .env.example  LABS.md  README.md
modules/03-databases/go/: README.md
modules/03-databases/js/: README.md
modules/03-databases/labs/: README.md  schema.sql
modules/03-databases/py/: README.md
modules/03-databases/rust/: README.md
modules/03-databases/ts/: README.md
modules/04-web-services/: LABS.md  README.md
scripts/: new-module.sh
(+11 files in other folders)
